Bug 426499 - Draggable area not clearly signposted/misleading highlighting
Summary: Draggable area not clearly signposted/misleading highlighting
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Andrey
URL: https://invent.kde.org/utilities/ark/...
Keywords: usability
: 445169 446698 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-09-13 20:54 UTC by Joe Dight
Modified: 2023-09-18 14:00 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Ark vs Dolphin highlighting (143.62 KB, image/png)
2020-09-13 20:54 UTC, Joe Dight
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joe Dight 2020-09-13 20:54:35 UTC
Created attachment 131614 [details]
Ark vs Dolphin highlighting

SUMMARY
When selecting files to drag, the file's entire column is highlighted blue, despite the only draggable bit being the name.
This means that there is a large area which looks drag-droppable which I can't drag, and also a large area which looks like I can't use to drag-select, when in fact I can.
Dolphin (in detail view mode) does this better, only highlighting the draggable area blue, so giving clear separation between drag-drop and drag-select areas.

STEPS TO REPRODUCE
1. Open file in Ark, select some files.
2. Drag them over to some other application from the right hand side.

OBSERVED RESULT
The selection in Ark is changed.

EXPECTED RESULT
The right hand rows shouldn't be highlighted in the first place, so I won't try to drag there.

SOFTWARE/OS VERSIONS
(Ark + frameworks from kdesrc-build)
Operating System: Fedora 33
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.74.0
Qt Version: 5.14.2
Kernel Version: 5.8.3-300.fc33.x86_64
OS Type: 64-bit
Processors: 8 × Intel® Core™ i5-8265U CPU @ 1.60GHz
Memory: 7.5 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Comment 1 Nate Graham 2021-11-08 23:14:56 UTC
*** Bug 445169 has been marked as a duplicate of this bug. ***
Comment 2 Nate Graham 2021-12-08 20:36:42 UTC
*** Bug 446698 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2022-02-08 16:20:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/97
Comment 5 Andrey 2022-05-12 17:56:40 UTC
Git commit 15bccd6a1d0514089729ff1422e9b83cde19d5bd by Andrey Butirsky.
Committed on 12/05/2022 at 17:56.
Pushed by butirsky into branch 'master'.

fix draggable area not clearly signposted/misleading highlighting

M  +2    -3    part/archivemodel.cpp
M  +13   -0    part/archiveview.cpp
M  +11   -0    part/archiveview.h
M  +3    -0    part/part.cpp

https://invent.kde.org/utilities/ark/commit/15bccd6a1d0514089729ff1422e9b83cde19d5bd
Comment 6 Nate Graham 2022-05-12 18:10:25 UTC
That commit does not solve the issue. As the reporter said:

> When selecting files to drag, the file's entire column is highlighted blue, despite the only draggable
> bit being the name.
> This means that there is a large area which looks drag-droppable which I can't drag, and also a
> large area which looks like I can't use to drag-select, when in fact I can.

That is still an issue. Re-opening.
Comment 7 Andrey 2022-05-12 22:26:22 UTC
Hmm, I tried to attach the screenshot but seem can't do that any more. Any help?
Comment 8 Andrey 2022-05-13 10:40:48 UTC
An attempt was made to fix it non-destructively using different colors for draggable and non-draggable areas.
Here is how it looks like:
https://invent.kde.org/utilities/ark/-/merge_requests/115#note_447931

There are different opinions if it actually fixes the bug.
I would love to know what OP thinks about it.
Joe, please reply if you read this.
Comment 9 Kisaragi Hiu 2022-05-13 15:09:56 UTC
After https://invent.kde.org/system/dolphin/-/merge_requests/278 resolved bug 181437 in Dolphin, this should be implemented by starting a drag-and-drop when a drag is initiated on an already selected item, not by changing the highlighting to partially match Dolphin's previous behavior.

(I am the OP of the duplicate bug 445169.)
Comment 10 Joe Dight 2022-05-13 16:40:32 UTC
(In reply to Andrey from comment #8)
> Here is how it looks like:
> https://invent.kde.org/utilities/ark/-/merge_requests/115#note_447931
> 
> There are different opinions if it actually fixes the bug.
> I would love to know what OP thinks about it.
I can't see if the lighter/darker split also exists on hover, when 
no selection has been made. 
If it does (or is made obvious somehow else) the bug is definitely fixed.

Otherwise it's more nebulous, because you still can't tell where 
to drag before you've made a selection.
 
But maybe that would be a new bug?
Sadly, the SUMMARY is rather broader than the STEPS TO REPRODUCE,
which is where the uncertainty arises I think.
Comment 11 Andrey 2022-05-13 23:42:31 UTC
Thanks for replies.

(In reply to Joe Dight from comment #10)
> I can't see if the lighter/darker split also exists on hover, when 
> no selection has been made. 
> If it does (or is made obvious somehow else) the bug is definitely fixed.
No, it doesn't. It wasn't clear from the report so I didn't pay much attention to hover.

However, in previous version I cut off the hover highlight:
https://invent.kde.org/utilities/ark/-/merge_requests/115#note_447960
It doesn't look in-style with recent selection highlights though as I tend to keep full-row selection.
I'll see if similar color split can be implemented for hover highlight too.
Comment 12 Andrey 2022-05-16 22:24:29 UTC
Please consider this:
https://invent.kde.org/utilities/ark/-/merge_requests/118

Hovered (with cursor) and selected rows are still in style but now both have clear color separation of draggable area.
Comment 13 Andrey 2022-05-17 15:18:46 UTC
(In reply to Joe Dight from comment #10)
> I can't see if the lighter/darker split also exists on hover, when 
> no selection has been made. 
> If it does (or is made obvious somehow else) the bug is definitely fixed.
The latest MR addresses this, could you have a look Joe?
https://invent.kde.org/utilities/ark/-/merge_requests/118
Comment 14 Andrew Shark 2023-09-15 11:01:52 UTC
I cannot reproduce. When selecting items, yes, the whole row is highlighted, but not as in screenshot in comment 1. The items in Name column are highlighted brightly, but in other columns, the highlighting is very dim.

Operating System: Arch Linux 
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10
Kernel Version: 6.5.3-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × Intel® Core™ i7-8700 CPU @ 3.20GHz
Memory: 31.3 ГиБ of RAM
Graphics Processor: AMD Radeon Pro W6600
Ark: 23.08.0
Comment 15 Nate Graham 2023-09-15 16:48:43 UTC
It's better now for sure. Not implemented in the way I would have preferred, but I guess it counts as fixed.
Comment 16 Andrey 2023-09-18 14:00:30 UTC
Right.
Also FYI, me and Nate couldn't come to consensus back in the time,
but this unmerged MR makes things even better IMO:
https://invent.kde.org/utilities/ark/-/merge_requests/118

You are welcome to check the screenshots there yourself and express your opinion too.