fix draggable area not clearly signposted/misleading highlighting

BUG: 426499